# Deep-CFR-2025

./: README.md  leduc_example.py  paper_experiment_bigleduc_exploitability.py  paper_experiment_leduc_example_buf_10.py  paper_experiment_leduc_example_buf_100.py  paper_experiment_leduc_example_buf_1000.py  paper_experiment_leduc_example_buf_50.py  paper_experiment_leduc_example_buf_500.py  paper_experiment_leduc_exploitability.py  paper_experiment_sdcfr_vs_deepcfr_h2h.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
DeepCFR/: EvalAgentDeepCFR.py  IterationStrategy.py  TrainingProfile.py  __init__.py
DeepCFR/utils/: device.py
DeepCFR/workers/chief/: dist.py  local.py
DeepCFR/workers/driver/: Driver.py  _HighLevelAlgo.py
DeepCFR/workers/la/: AdvWrapper.py  AvrgWrapper.py  dist.py  local.py
DeepCFR/workers/la/buffers/: AdvReservoirBuffer.py
DeepCFR/workers/ps/: dist.py  local.py
tests/: test_chief_serialization.py  test_gpu_metrics.py  test_memory_allocation.py
utils/: __init__.py  llm.py  memory.py
