[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-cfr"
version = "0.1.0"
description = "Scalable implementation of Deep CFR and SD-CFR algorithms on top of PokerRL-2025."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Eric Steinberger" }]
license = {file = "LICENSE"}
dependencies = [
    "numpy==2.3.2",
    "psutil==7.0.0",
    "ray[default]==2.49.1",
    "torch==2.8.0",
    "PokerRL @ git+https://github.com/theGholland/PokerRL-2025.git",
    "tensorboard==2.20.0",
    "requests>=2.32.4",
]

[project.urls]
Homepage = "https://github.com/theGholland/Deep-CFR-2025"

[tool.setuptools.packages.find]
include = ["DeepCFR*"]
